--- a/flaek-client/package.json
+++ b/flaek-client/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "reactflow": "^11.11.4",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.14",
     "zod": "^4.1.12"
   },
