--- a/flaek-server/package.json
+++ b/flaek-server/package.json
@@ -36,6 +36,7 @@
     "otplib": "^12.0.1",
     "pino": "^10.0.0",
     "pino-http": "^11.0.0",
+    "socket.io": "^4.8.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
