--- a/flaek-client/package.json
+++ b/flaek-client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@arcium-hq/client": "^0.3.0",
+    "@solana/web3.js": "^1.98.4",
     "@tailwindcss/vite": "^4.1.14",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
