--- a/flaek-client/package.json
+++ b/flaek-client/package.json
@@ -20,6 +20,7 @@
     "reactflow": "^11.11.4",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.14",
+    "qrcode": "^1.5.4",
     "zod": "^4.1.12"
   },
   "devDependencies": {
