--- a/flaek-client/package.json
+++ b/flaek-client/package.json
@@ -15,12 +15,12 @@
     "@tailwindcss/vite": "^4.1.14",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.545.0",
+    "qrcode": "^1.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "reactflow": "^11.11.4",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.14",
-    "qrcode": "^1.5.4",
     "zod": "^4.1.12"
   },
   "devDependencies": {
@@ -35,6 +35,7 @@
     "globals": "^16.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7"
+    "vite": "^7.1.7",
+    "vite-plugin-node-polyfills": "^0.24.0"
   }
 }
