--- a/flaek-server/package.json
+++ b/flaek-server/package.json
@@ -42,9 +42,16 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.8.1",
+    "@types/csv-parse": "^1.1.12",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.7.0",
+    "@types/otplib": "^7.0.0",
+    "@types/pino": "^7.0.4",
+    "@types/pino-http": "^5.8.4",
+    "@types/socket.io": "^3.0.1",
     "ts-node-dev": "^2.0.0",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
